Fixing cropping

--- a/js/croppic/croppic.css
+++ b/js/croppic/croppic.css
@@ -1,19 +1,4 @@
-			#croppic{
-				width: 400px;  /* MANDATORY */
-				height: 208px; /* MANDATORY */
-				position: relative;  /* MANDATORY */
-				
-				margin: 50px 70px 20px;
-				border: 3px  solid #FFF;
-				box-sizing: content-box;
-				-moz-box-sizing: content-box;
-				border-radius: 2px;
-				background-image: url(../img/placeholder.png);
-				background-repeat: no-repeat;
-				background-position: center;
-				box-shadow: 8px 8px 0px rgba(0,0,0,0.1);
-			}
-			
+
 			/* DO NOT CHANGE FROM HERE ( unless u know what u are doing) */
 			.cropImgWrapper{
 				cursor: -webkit-grab;
@@ -56,7 +41,7 @@
 				float:left;
 				margin:0;
 				cursor:pointer;
-				background-image:url('../img/cropperIcons.png');	
+				background-image:url('imgcropperIcons.png');	
 				width:30px;
 				height:30px;
 				text-align:center;
